[package]
name = "stegop2p-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
libc = "0.2.147"
futures = "0.3.28"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.24.0"